change fields related to server json struct to follow camelcase instead of snake case
